test/files/neg/t4457_1.check
t4457_1.scala:27: error: ambiguous reference to overloaded definition,
both method aFunc in object ImplicitConvAmbiguity2 of type [A](a: ImplicitConvAmbiguity2.NZ[A]): ImplicitConvAmbiguity2.AA[Float]
and  method aFunc in object ImplicitConvAmbiguity2 of type [A](a: ImplicitConvAmbiguity2.NE[A]): ImplicitConvAmbiguity2.AA[A]
match argument types (Float)
    val x = aFunc(4F)
            ^
t4457_1.scala:11: warning: [quick fix available] Implicit definition should have explicit type (inferred ImplicitConvAmbiguity2.NE[Float])
  implicit def conv1(i: Float) = new NE[Float]
               ^
t4457_1.scala:12: warning: [quick fix available] Implicit definition should have explicit type (inferred ImplicitConvAmbiguity2.N[java.util.TooManyListenersException])
  implicit def conv3(op: AA[java.util.TooManyListenersException]) = new N[java.util.TooManyListenersException]
               ^
t4457_1.scala:13: warning: [quick fix available] Implicit definition should have explicit type (inferred ImplicitConvAmbiguity2.N[Float])
  implicit def conv4(op: AA[Float]) = new N[Float]
               ^
t4457_1.scala:14: warning: [quick fix available] Implicit definition should have explicit type (inferred ImplicitConvAmbiguity2.NZ[Float])
  implicit def conv7(i: Float) = new NZ[Float]
               ^
t4457_1.scala:15: warning: [quick fix available] Implicit definition should have explicit type (inferred ImplicitConvAmbiguity2.N[java.util.GregorianCalendar])
  implicit def conv5(e: BB[java.util.GregorianCalendar]) = new N[java.util.GregorianCalendar]
               ^
5 warnings
1 error
